--- a/environment.yaml
+++ b/environment.yaml
@@ -157,4 +157,4 @@ dependencies:
       - widgetsnbextension==4.0.5
       - yarl==1.8.2
       - zipp==3.12.0
-prefix: /opt/anaconda3/envs/fpt
+prefix: /miniconda/envs/fpt
